[workspace]
members = ["blockchain", "wallet", "transaction", "cli"]
resolver = "2"

[workspace.dependencies]
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
ring = "0.17.8"
rand = "0.8.5"
thiserror = "1.0"  #error handling
ed25519-dalek = "2.1.1"
